@@ -269,6 +269,17 @@ override_dh_autoreconf:
 override_dh_strip:
 	dh_strip --dbg-package=systemd-dbg
 
+override_dh_auto_test:
+ifeq (, $(findstring nocheck, $(DEB_BUILD_OPTIONS)))
+	# some tests hang under fakeroot, so disable fakeroot
+	echo "01234567890123456789012345678901" > build-deb/machine-id
+	env -u LD_PRELOAD SYSTEMD_MACHINE_ID_PATH=$(CURDIR)/build-deb/machine-id \
+		make -C build-deb check || ( \
+		cd build-deb; \
+		for f in test-*.log; do echo "==== $$f ===="; cat $$f; done; \
+		exit 0; )  # replace with 1 to make failures fatal
+endif
+
 %:
 ifeq (,$(findstring stage1,$(DEB_BUILD_PROFILES)))
 	dh $@ --with autoreconf,gir,python3 --parallel
